# euroalio2018

./: .gitignore  README.md
checker/: checker.py
code/: CMakeLists.txt
code/goc/: CMakeLists.txt
code/goc/include/goc/: goc.h
code/goc/include/goc/base/: maybe.h
code/goc/include/goc/collection/: bitset_utils.h  collection_utils.h
code/goc/include/goc/graph/: digraph.h  path_finding.h
code/goc/include/goc/linear_programming/cplex/: cplex_formulation.h
code/goc/include/goc/linear_programming/cuts/: separation_algorithm.h  separation_strategy.h
code/goc/include/goc/linear_programming/model/: expression.h  formulation.h
code/goc/include/goc/log/: bcp_execution_log.h  blb_execution_log.h  mlb_execution_log.h
code/goc/include/goc/math/: interval.h  linear_function.h  pwl_function.h
code/goc/include/goc/time/: stopwatch.h
code/goc/include/goc/vrp/: vrp_solution.h
code/goc/src/graph/: digraph.cpp  path_finding.cpp
code/goc/src/linear_programming/colgen/: colgen.cpp
code/goc/src/linear_programming/cplex/: cplex_formulation.cpp  cplex_wrapper.cpp
code/goc/src/linear_programming/cuts/: separation_algorithm.cpp  separation_strategy.cpp
code/goc/src/linear_programming/model/: expression.cpp
code/goc/src/log/: bcp_execution_log.cpp  blb_execution_log.cpp  mlb_execution_log.cpp
code/goc/src/math/: interval.cpp  linear_function.cpp  pwl_function.cpp
code/goc/src/print/: table_stream.cpp
code/goc/src/runner/: runner_utils.cpp
code/goc/src/time/: stopwatch.cpp
code/goc/src/vrp/: vrp_solution.cpp
code/include/: cttbf.h  gcs.h  model.h  preprocess_travel_times.h  ttbf.h  vrp_instance.h
code/src/: cttbf.cpp  gcs.cpp  main.cpp  preprocess_travel_times.cpp  ttbf.cpp  vrp_instance.cpp
experiments/: comparison.json
instances/euroalio2018/: C101_25_0.json  C101_25_a.json  C101_25_b.json  C101_25_c.json  C101_25_d.json  C201_25_0.json  C201_25_a.json  C201_25_b.json  C201_25_c.json  C201_25_d.json  R101_25_0.json  R101_25_a.json  R101_25_b.json  R101_25_c.json  R101_25_d.json  R201_25_0.json  R201_25_a.json  R201_25_b.json  R201_25_c.json  R201_25_d.json  RC101_25_0.json  RC101_25_a.json  RC101_25_b.json  RC101_25_c.json  RC101_25_d.json  RC201_25_0.json  RC201_25_a.json  RC201_25_b.json  RC201_25_c.json  RC201_25_d.json  index.json  prettify.py  solutions.json
runner/: runner.py
